2008-03-29  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/vfprintf.c (vfprintf): Correct overflow test.

	[BZ #5939]
	* sysdeps/posix/tempname.c (__gen_tempname): Correct flag selection.

	* posix/getopt.c (_getopt_internal_r): Remove old POSIX-demanded
	error message.  POSIX today does not require the messages to be in
	a specific form.  Suggested by Jim Meyering <jim@meyering.net>.

	[BZ #5979]
	* sunrpc/auth_unix.c: Unify printed strings.
	* sunrpc/clnt_tcp.c: Likewise.
	* sunrpc/clnt_udp.c: Likewise.
	* sunrpc/clnt_unix.c: Likewise.
	* sunrpc/svc_tcp.c: Likewise.
	* sunrpc/svc_udp.c: Likewise.
	* sunrpc/svc_unix.c: Likewise.
	* sunrpc/xdr.c: Likewise.
	* sunrpc/xdr_array.c: Likewise.
	* sunrpc/xdr_rec.c: Likewise.
	* sunrpc/xdr_ref.c: Likewise.
	* locale/programs/ld-time.c (time_finish): Unify messages.
	* locale/programs/locfile.c (handle_copy): Fix typo.
	* nscd/nscd.c (options): Fix typo.

	[BZ #5995]
	* stdlib/strtod_l.c: Use correct sign for result in one more
	underflow case.
	Patch by Eric Blake <ebb9@byu.net>.

2008-03-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/wordsize-64/syscalls.list: Add open
	and creat system calls.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Remove open system
	call.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Remove open and creat
	system calls.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Likewise.

2008-03-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/local_lim.h: Undefined ARG_MAX if
	<linux/limits.h> has defined it.
	* sysdeps/unix/sysv/linux/sys/param.h: Define NCARGS to the legacy
	ARG_MAX value and prevent ARG_MAX from being defined by the kernel
	headers.
	* sysdeps/unix/sysv/linux/sysconf.c: Define legacy_ARG_MAX and use
	it instead of ARG_MAX.

2008-03-25  Jakub Jelinek  <jakub@redhat.com>
